<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OrgApp</string>

    <!-- Allgemeine Buttons -->
    <string name="SUBMIT">Submit</string>
    <string name="SAVE">Save</string>
    <string name="CANCEL">Cancel</string>
    <string name="REFRESH">Refresh</string>
    <string name="MALE">m</string>
    <string name="FEMALE">w</string>
    <string name="YES">Yes</string>
    <string name="NO">No</string>
    <string name="SETTINGS">Settings</string>
    <string name="SEND_PASSWORD">Request a new password</string>

    <!-- Startbildschirm -->
    <string name="LOGIN">Log In</string>
    <string name="REGISTER">Register</string>
    <string name="FORGOTPASSWORD">Forgot Password?</string>

    <!-- Register/Login -->
    <string name="EMAIL">Email address</string>
    <string name="PASSWORD">Password</string>
    <string name="PASSWORD_CONFIRMATION">Password (confirmation)</string>
    <string name="FIRSTNAME">First name</string>
    <string name="LASTNAME">Last name</string>
    <string name="FORGOTPASSWORD_MESSAGE">Enter the e-mail address associated with your OrgApp account, then click \"Request a new password\". We\'ll email you a new password to that email. \n(If you are not registered, you won\'t receive any email from us.)</string>
	<string name="FORGOT_PASSWORD">Forgot Password?</string>
    
    <!-- Main menu -->
    <string name="CALENDAR">Calendar</string>
    <string name="GROUPS">My groups</string>
    <string name="NOTIFICATIONS">Notifications</string>
    <string name="PROFILE">Profile</string>
    <string name="LOGOUT">Logout</string>

    <!-- Event -->
    <string name="GROUPNAME_LABEL">Group: </string>
    <string name="EVENTNAME_LABEL">Event: </string>
    <string name="EVENTTIME_LABEL">Time: </string>
    <string name="EVENTDATE_LABEL">Date: </string>
    <string name="EVENTLOCATION_LABEL">Location: </string>
    <string name="DECLINED">Currently not going</string>
    <string name="ATTENDING">Currently going</string>
    <string name="COMMENTSLABEL">Comments</string>
    <string name="ADDNEWCOMMENT">Add new comment</string>
    <string name="ATTENDING_MEMBER">Attending member</string>
    <string name="SHOW_ATTENDING_MEMBER">Show attending member</string>
    <string name="EDIT_EVENT">Edit event</string>
    <string name="DELETE_EVENT">Delete event</string>
    <string name="SHARE">Share</string>
    <string name="SHARE_EVENT_VIA_FACEBOOK">On Facebook</string>
    <string name="SHARE_EVENT_VIA_TWITTER">On Twitter</string>

    <!-- Event Settings -->
    <string name="RECEIVED_EVENT_ENTRIES">Do you want to limit how much events you see?</string>

    <!-- Groups -->
    <string name="NEW_GROUP">New Group</string>
    <string name="GROUP_INFO">Group info: </string>
    <string name="GROUP_SETTINGS">Group settings</string>
    <string name="EVENTNAME">Event name</string>
    <string name="EVENTLOCATION">Event location</string>
    <string name="EVENTDATE">Event date</string>
    <string name="EVENTTIME">Event time</string>
    <string name="REGULARITYDATE">Do you frequently want to host this event?</string>

    <string-array name="SPINNER_REGULARITYDATE">
        <item>empty</item>
        <item>daily</item>
        <item>weekly</item>
        <item>every 2 weeks</item>
        <item>monthly</item>
    </string-array>

    <string name="REGULARITY_QUESTION">Do you want to choose an ending date or number of events?</string>
    <string name="REGULARITY_DATE">Date</string>
    <string name="REGULARITY_NUMBER">Number</string>
    <string name="EVENT_SETTINGS">Event settings</string>
    <string name="NAME">Group name</string>
    <string name="INFO">Info</string>
    <string name="SAVE_GROUP">Save</string>
    <string name="ADD_EMAIL_FIELD">New E-Mail Field</string>
    <string name="MANUAL_INVITE">Invite</string>
    <string name="MANUAL_CANCEL">Cancel</string>
    <string name="LIST_INVITE">Invite</string>
    <string name="LIST_CANCEL">Cancel</string>
    <string name="CREATE_EVENT">Create new event</string>
    <string name="EDIT_GROUP">Edit group</string>
    <string name="DELETE_GROUP">Delete group</string>
    <string name="LEAVE_GROUP">Leave group</string>
    <string name="SHOW_MEMBER_LIST">Show member list</string>
    <string name="MEMBER_LIST">Member list</string>
    <string name="BACK">Back</string>
    <string name="MEMBER_INFO">Member information</string>
    <string name="CHOOSE_USER_PRIVILEGE">Which privileges would you grant this user?</string>
    <string name="PRIVILEGE_INVITATION">Able to invite member</string>
    <string name="PRIVILEGE_MEMBERLIST_Editing">Able to kick member</string>
    <string name="PRIVILEGE_EVENT_CREATING">Able to create events</string>
    <string name="PRIVILEGE_EVENT_EDITING">Able to edit events</string>
    <string name="PRIVILEGE_EVENT_DELETING">Able to delete events</string>
    <string name="PRIVILEGE_COMMENT_EDITING">Able to edit comments</string>
    <string name="PRIVILEGE_COMMENT_DELETING">Able to delete comments</string>
    <string name="PRIVILEGE_MANAGEMENT">Able to manage privileges</string>
    <string name="SAVE_PRIVILEGES">Save</string>
    <string name="INVITE_MEMBER">Invite new members</string>
    <string name="TEXT_FIRST_NAME">First name</string>
    <string name="TEXT_LAST_NAME">Last name</string>
    <string name="TEXT_EMAIL">Email</string>
    <string name="USER_SELECTED">User selected</string>
    <string name="INVITE_MEMBER_LIST_USER_INFO">Please touch a person to invite them</string>

    <!-- Notifications -->
    <string name="NOTIFICATION_SETTINGS">Settings</string>

    <!-- Notifications Settings -->

    <string name="RECEIVED_NOTIFICATIONS">When would you like to receive notifications?</string>
    <string name="GROUP_INVITES">Group invites</string>
    <string name="GROUP_EDITED">Group edited</string>
    <string name="GROUP_REMOVED">Group removed</string>
    <string name="EVENTS_ADDED">Events added</string>
    <string name="EVENTS_EDITED">Events edited</string>
    <string name="EVENTS_REMOVED">Events removed</string>
    <string name="COMMENTS_ADDED">Comments added</string>
    <string name="COMMENTS_EDITED">Comments edited</string>
    <string name="COMMENTS_REMOVED">Comments removed</string>
    <string name="PRIVILEGES_GIVEN">Privileges given</string>
    <string name="RECEIVED_ENTRIES">Do you want to limit how much notifications you see?</string>
    <string name="NUMBER_ENTRIES">Number of entries</string>
    <string name="NOTIFICATION_SETTINGS_SAVE">Save</string>
    <string name="NOTIFICATION_SETTINGS_CANCEL">Cancel</string>

    <!-- Profil -->
    <string name="PROFILE_SETTINGS">Settings</string>
    <string name="CHANGE_PRIVATE_INFORMATION">Change private information</string>
    <string name="LIST_EVENT_HISTORY">List of event history</string>
    <string name="CHANGE_SECURITY_INFORMATION">Change security information</string>
    <string name="FIRSTNAME_MUST_HAVE">First name *</string>
    <string name="LASTNAME_MUST_HAVE">Last name *</string>
    <string name="BIRTHDAY">Birthday</string>
    <string name="GENDER">Gender</string>
    <string name="VIBRATION_AT_NEW_NOTIFICATIONS">Do you want vibration at new notifications?</string>
    <string name="MEMBER_SINCE">Member since</string>
    <string name="CHANGE_INFO">Change information</string>
    <string name="CHANGE_BIRTHDAY">Change birthday</string>
    <string name="GENERAL_INFORMATION">General information</string>
    <string name="EMAIL_MUST_HAVE">Email *</string>
    <string name="PASSWORD_MUST_HAVE">Password *</string>
    <string name="PASSWORD_CONFIRM_MUST_HAVE">Password (confirm) *</string>
    <string name="CLEAR_BIRTHDAY">Clear birthday</string>

    <!-- Private information -->
    <string name="PRIVATE_INFORMATION">Private information</string>
    <string name="SET_NEW_BIRTHDAY">Set new birthday</string>

    <!-- Security information -->
    <string name="SECURITY_INFORMATION">Security information</string>

    <!-- Event history -->
    <string name="EVENT_HISTORY">Event history</string>

    <!-- Comments -->
    <string name="COMMENT">Insert a comment</string>
    <string name="COMMENTTEXT">Comment</string>
    <string name="COMMENTLABEL">Comment:</string>
    <string name="action_settings">Settings</string>

    <string name="hello_world">Hello world!</string>

</resources>