<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/EMAIL" />

            <TextView
                android:id="@+id/MEMBER_EMAIL"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/FIRSTNAME" />

            <TextView
                android:id="@+id/MEMBER_FIRSTNAME"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/LASTNAME" />

            <TextView
                android:id="@+id/MEMBER_LASTNAME"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/MEMBER_BIRTHDAY_TEXT_VIEW"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/BIRTHDAY" />

            <TextView
                android:id="@+id/MEMBER_BIRTHDAY"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/MEMBER_GENDER_TEXT_VIEW"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/GENDER" />

            <TextView
                android:id="@+id/MEMBER_GENDER"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/MEMBER_SINCE" />

            <TextView
                android:id="@+id/MEMBER_SINCE"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/PRIVILEGE_OPTIONS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="2dip"
                android:layout_marginBottom="10dip"
                android:background="#000000"
                android:focusable="true"
                android:focusableInTouchMode="true" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/CHOOSE_USER_PRIVILEGE" />

                    <CheckBox
                        android:id="@+id/PRIVILEGE_INVITATION"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/PRIVILEGE_INVITATION" />

                    <CheckBox
                        android:id="@+id/PRIVILEGE_MEMBERLIST_Editing"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/PRIVILEGE_MEMBERLIST_Editing" />

                    <CheckBox
                        android:id="@+id/PRIVILEGE_EVENT_CREATING"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/PRIVILEGE_EVENT_CREATING" />

                    <CheckBox
                        android:id="@+id/PRIVILEGE_EVENT_EDITING"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/PRIVILEGE_EVENT_EDITING" />

                    <CheckBox
                        android:id="@+id/PRIVILEGE_EVENT_DELETING"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/PRIVILEGE_EVENT_DELETING" />

                    <CheckBox
                        android:id="@+id/PRIVILEGE_COMMENT_EDITING"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/PRIVILEGE_COMMENT_EDITING" />

                    <CheckBox
                        android:id="@+id/PRIVILEGE_COMMENT_DELETING"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/PRIVILEGE_COMMENT_DELETING" />

                    <CheckBox
                        android:id="@+id/PRIVILEGE_MANAGEMENT"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/PRIVILEGE_MANAGEMENT" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <Button
                        android:id="@+id/SAVE_PRIVILEGES"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="?android:attr/selectableItemBackground"
                        android:text="@string/SAVE_PRIVILEGES" />

                    <Button
                        android:id="@+id/CANCEL"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="?android:attr/selectableItemBackground"
                        android:text="@string/CANCEL" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</ScrollView>