<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/NAME"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/NAME" />

    <EditText
        android:id="@+id/INFO"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/INFO" >

        <requestFocus />
    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/SAVE"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/SAVE_GROUP" />

        <Button
            android:id="@+id/CANCEL"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/CANCEL" />
    </LinearLayout>

</LinearLayout>