<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/REGISTER"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/EMAIL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/EMAIL"
        android:inputType="textEmailAddress" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/PASSWORD"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/PASSWORD"
        android:inputType="textPassword" />
    
    <EditText
        android:id="@+id/PASSWORD_CONFIRMATION"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/PASSWORD_CONFIRMATION"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/FIRSTNAME"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/FIRSTNAME" />

    <EditText
        android:id="@+id/LASTNAME"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/LASTNAME" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

      <Button
            android:id="@+id/SUBMIT"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:text="@+string/SUBMIT" />

        <Button
            android:id="@+id/CANCEL"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:text="@+string/CANCEL" />
    </LinearLayout>

</LinearLayout>