<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:scrollbars="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/EVENTNAME_LABEL"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/EVENTNAME"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@+string/EVENTNAME"
            android:inputType="textMultiLine" 
            android:maxLines="3" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/EVENTLOCATION_LABEL"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/EVENTLOCATION"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@+string/EVENTLOCATION"
            android:inputType="textMultiLine" 
            android:maxLines="3" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/EVENTDATE_LABEL"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/EVENTDATE"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="false"
            android:hint="@+string/EVENTDATE"
            android:inputType="date" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/EVENTTIME_LABEL"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/EVENTTIME"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="false"
            android:hint="@+string/EVENTTIME" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/REGULARITYDATE"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/REGULARITYDATE" />

    <Spinner
        android:id="@+id/REGULARITYDATE_CHOSEN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <TextView
        android:id="@+id/REGULARITY_QUESTION"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/REGULARITY_QUESTION"
        android:visibility="gone" />

    <RadioGroup
        android:id="@+id/RADIOGROUP_REGULARITY"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" >

        <RadioButton
            android:id="@+id/REGULARITY_DATE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/REGULARITY_DATE" />

        <RadioButton
            android:id="@+id/REGULARITY_NUMBER"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/REGULARITY_NUMBER" />
    </RadioGroup>

    <EditText
        android:id="@+id/REGULARITY_CHOSEN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint=""
        android:visibility="gone" >
    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/SAVE"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/SAVE" />

        <Button
            android:id="@+id/CANCEL"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/CANCEL" />
    </LinearLayout>

</LinearLayout>