<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
    <CheckBox
		android:id="@+id/EVENT_SETTINGS_RECEIVED_EVENT_ENTRIES"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/RECEIVED_EVENT_ENTRIES"
		android:textAppearance="?android:attr/textAppearanceMedium" />
  
	<EditText
		android:id="@+id/EVENT_SETTINGS_NUMBER_EVENT_ENTRIES"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:hint="@string/NUMBER_ENTRIES"
		android:textAppearance="?android:attr/textAppearanceMedium"
		android:inputType="number"
		android:visibility="gone" >
	</EditText>
	
	<LinearLayout
    	android:layout_width="match_parent"
        android:layout_height="wrap_content" >

		<Button
        	android:id="@+id/EVENT_SETTINGS_BUTTON_SAVE"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/SAVE"
            android:onClick="saveEventSettings" />

		<Button
        	android:id="@+id/EVENT_SETTINGS_BUTTON_CANCEL"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/CANCEL"
            android:onClick="cancelEventSettings" />
    </LinearLayout>
    
 </LinearLayout>